# prophet_sphere

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.dev
components/app_core/: CMakeLists.txt  Kconfig.orb  app_control_task.c  app_control_task.h  app_events.c  app_fsm.c  app_tasking.c  control_dispatch.c  control_dispatch.h  mode_action_executor.c  mode_action_executor.h  mode_action_executor_audio.c  mode_action_executor_internal.h  mode_manager.c  mode_timers.h  service_lifecycle_guard.c  session_controller.c  submode_controller.c  submode_controller.h
components/app_core/dispatch/: control_dispatch.c
components/app_core/include/: app_api.h  app_events.h  app_fsm.h  app_media_gateway.h  app_tasking.h  control_dispatch.h  interaction_sequence.h  mode_manager.h  session_controller.h
components/app_core/mode/: interaction_sequence.c  mode_action_executor.c  mode_action_executor_audio.c  mode_action_executor_mic.c  mode_action_executor_session.c  mode_dispatch_pipeline.c  mode_dispatch_pipeline.h  mode_event_adapter.c  mode_event_adapter.h  mode_manager.c  mode_switch_cleanup.c  mode_switch_cleanup.h  mode_switch_orchestrator.c  mode_switch_orchestrator.h  mode_timers.c  submode_controller.c
components/app_core/runtime/: app_api.c  app_control_task.c  app_media_gateway.c  app_tasking.c  app_tasking_bootstrap.c
components/bsp/: CMakeLists.txt  Kconfig.orb  bsp_mode_button.c
components/bsp/board/: bsp_board.c
components/bsp/include/: bsp_board.h  bsp_mode_button.h  bsp_pins.h  bsp_submode_button.h
components/bsp/input/: bsp_mode_button.c  bsp_submode_button.c
components/modes/: CMakeLists.txt  prophecy_common.c  prophecy_common.h
components/modes/include/: app_mode.h
components/modes/mode_hybrid_ai/: hybrid_flow.c  hybrid_policy.c  hybrid_remote_contract.c  hybrid_visuals.c  mode_hybrid_ai.c  mode_hybrid_ai_internal.h
components/modes/mode_installation/: mode_installation.c
components/modes/mode_offline_scripted/: mode_offline_scripted.c  offline_submode.h  offline_submode_aura.c  offline_submode_lottery.c  offline_submode_prophecy.c  offline_submode_router.c
components/service_runtime/: CMakeLists.txt  service_runtime.c
components/service_runtime/include/: service_runtime.h
components/services_ai/: CMakeLists.txt  Kconfig.orb  ai_client.c  ai_task.c  ai_task.h  prompt_engine.c
components/services_ai/include/: ai_client.h  ai_types.h  prompt_engine.h
components/services_audio/: CMakeLists.txt  Kconfig.orb  audio_asset_registry.h  audio_dac_backend.h  audio_i2s_hal.c  audio_i2s_hal.h  audio_mp3_helix.h  audio_output_i2s.h  audio_reactive_analyzer.h  audio_task.c  audio_task.h  audio_worker.c  audio_worker.h  audio_worker_bg.c  audio_worker_bg.h  audio_worker_bg_stream.h  audio_worker_commands.h  audio_worker_internal.h  audio_worker_lifecycle.h  audio_worker_mixer.c  audio_worker_mixer.h  audio_worker_playback.h  audio_worker_reactive.h  audio_worker_resampler.h  audio_worker_sim.h
components/services_audio/codec/: audio_mp3_helix.c  helix_memory_shim.c
components/services_audio/dac/: audio_dac_max98357a.c  audio_dac_pcm5102a.c
components/services_audio/include/: audio_service.h  audio_types.h
components/services_audio/output/: audio_output_i2s.c
components/services_audio/registry/: audio_asset_registry.c
components/services_audio/service/: audio_service.c
components/services_audio/task/: audio_task.c
components/services_audio/worker/: audio_reactive_analyzer.c  audio_worker.c  audio_worker_bg.c  audio_worker_bg_stream.c  audio_worker_commands.c  audio_worker_lifecycle.c  audio_worker_mixer.c  audio_worker_playback.c  audio_worker_reactive.c  audio_worker_resampler.c  audio_worker_sim.c
components/services_config/: CMakeLists.txt  Kconfig.orb  config_defaults.c  config_defaults.h  config_manager.c  config_store_nvs.c  config_store_nvs.h
components/services_config/defaults/: config_defaults.c
components/services_config/include/: config_manager.h  config_schema.h
components/services_config/manager/: config_manager.c
components/services_config/store/: config_store_nvs.c
components/services_led/: CMakeLists.txt  Kconfig.orb  led_effects.c  led_effects.h  led_output_ws2812.h  led_power_limit.h  led_scene_registry.c  led_service.c  led_strip_encoder.c  led_strip_encoder.h  led_task.c  led_task.h
components/services_led/effects/: led_effect_matrix_wled.h  led_effect_matrix_wled_dna.c  led_effect_matrix_wled_extra.c  led_effect_matrix_wled_metaballs.c  led_effects.c  led_effects_classic.c  led_effects_hybrid_core.c  led_effects_hybrid_wled.c  led_effects_scene_dispatch.h  led_effects_state.c  led_scene_registry.c
components/services_mic/: CMakeLists.txt  Kconfig.orb  idf_component.yml  mic_i2s_hal.h  mic_service.c  mic_task.c  mic_task_capture_ws.c  mic_task_events.c  mic_task_events.h  mic_task_flow.c  mic_task_flow.h  mic_task_loopback.c  mic_task_tts_pipeline.c  mic_task_tts_pipeline.h  mic_task_types.h  mic_ws_client.c  mic_ws_client_state.h  mic_ws_protocol.c  mic_ws_tts_stream.c
components/services_network/: CMakeLists.txt  Kconfig.orb  network_event_handlers.h  network_manager_events.c  network_manager_internal.h  network_manager_profile.c  network_manager_state.c  network_manager_wifi.c  network_policy.h
components/services_storage/: CMakeLists.txt  Kconfig.orb  content_index.c  storage_manager.c
components/services_web/: CMakeLists.txt  Kconfig.orb  rest_api.c  rest_api_audio.c  rest_api_common.c  rest_api_common.h  rest_api_config.c  rest_api_diag.c  rest_api_led.c  rest_api_modules.h  rest_api_offline.c  rest_api_server_tts.c  rest_api_talk.c  rest_api_talk_internal.h  rest_api_talk_say.c  rest_api_talk_ws.c  web_portal.c  web_portal.h  web_server.c
docs/: server_run.md  (+4 more)
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  orb_bootstrap.h
main/bootstrap/: orb_bootstrap.c  orb_bootstrap_diag.c  orb_bootstrap_init.c  orb_bootstrap_inputs.c  orb_bootstrap_internal.h  orb_bootstrap_runtime.c  orb_mode_runtime_policy.c  orb_mode_runtime_policy.h
(+256 files in other folders)
