idf_component_register(
    SRCS
        "app_events.c"
        "service_lifecycle_guard.c"
        "app_control_task.c"
        "app_tasking.c"
        "app_fsm.c"
        "mode_manager.c"
        "mode_action_executor.c"
        "mode_action_executor_audio.c"
        "mode_action_executor_mic.c"
        "mode_action_executor_session.c"
        "mode_timers.c"
        "control_dispatch.c"
        "submode_controller.c"
        "session_controller.c"
        "interaction_sequence.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        freertos
        common
        modes
        services_config
)
