idf_component_register(
    SRCS
        "runtime/app_events.c"
        "runtime/service_lifecycle_guard.c"
        "runtime/app_control_task.c"
        "runtime/app_tasking.c"
        "mode/app_fsm.c"
        "mode/mode_manager.c"
        "mode/mode_dispatch_pipeline.c"
        "mode/mode_event_adapter.c"
        "mode/mode_switch_cleanup.c"
        "mode/mode_switch_orchestrator.c"
        "mode/mode_action_executor.c"
        "mode/mode_action_executor_audio.c"
        "mode/mode_action_executor_mic.c"
        "mode/mode_action_executor_session.c"
        "mode/mode_timers.c"
        "mode/submode_controller.c"
        "mode/session_controller.c"
        "mode/interaction_sequence.c"
        "dispatch/control_dispatch.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "runtime"
        "mode"
        "dispatch"
    REQUIRES
        freertos
        common
        modes
        services_config
    PRIV_REQUIRES
        services_audio
)
