idf_component_register(
    SRCS
        "board/bsp_board.c"
        "input/bsp_mode_button.c"
        "input/bsp_submode_button.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "board"
        "input"
    REQUIRES
        common
        freertos
        esp_driver_gpio
)
