idf_component_register(
    SRCS
        "prophecy_common.c"
        "mode_offline_scripted/mode_offline_scripted.c"
        "mode_offline_scripted/offline_submode_router.c"
        "mode_offline_scripted/offline_submode_aura.c"
        "mode_offline_scripted/offline_submode_lottery.c"
        "mode_offline_scripted/offline_submode_prophecy.c"
        "mode_hybrid_ai/hybrid_flow.c"
        "mode_hybrid_ai/hybrid_policy.c"
        "mode_hybrid_ai/hybrid_remote_contract.c"
        "mode_hybrid_ai/hybrid_visuals.c"
        "mode_hybrid_ai/mode_hybrid_ai.c"
        "mode_installation/mode_installation.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
    REQUIRES
        common
        services_config
)
