idf_component_register(
    SRCS
        "client/ai_client.c"
        "task/ai_task.c"
        "prompt/prompt_engine.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "client"
        "task"
        "prompt"
    REQUIRES
        control_bus
        freertos
        common
)
