idf_component_register(
    SRCS
        "service/audio_service.c"
        "task/audio_task.c"
        "worker/audio_worker.c"
        "worker/audio_worker_sim.c"
        "worker/audio_worker_mixer.c"
        "worker/audio_worker_bg.c"
        "worker/audio_worker_reactive.c"
        "worker/audio_reactive_analyzer.c"
        "registry/audio_asset_registry.c"
        "codec/audio_mp3_helix.c"
        "codec/helix_memory_shim.c"
        "output/audio_output_i2s.c"
        "output/audio_i2s_hal.c"
        "dac/audio_dac_pcm5102a.c"
        "dac/audio_dac_max98357a.c"
        "third_party/helix/bitstream.c"
        "third_party/helix/buffers.c"
        "third_party/helix/dct32.c"
        "third_party/helix/dequant.c"
        "third_party/helix/dqchan.c"
        "third_party/helix/huffman.c"
        "third_party/helix/hufftabs.c"
        "third_party/helix/imdct.c"
        "third_party/helix/mp3dec.c"
        "third_party/helix/mp3tabs.c"
        "third_party/helix/polyphase.c"
        "third_party/helix/scalfact.c"
        "third_party/helix/stproc.c"
        "third_party/helix/subband.c"
        "third_party/helix/trigtabs.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "service"
        "task"
        "worker"
        "output"
        "dac"
        "codec"
        "registry"
        "third_party/helix"
        "third_party/helix/utils"
    REQUIRES
        app_core
        freertos
        common
        bsp
        services_config
        services_storage
        esp_driver_i2s
        esp_driver_gpio
        heap
)
