idf_component_register(
    SRCS
        "defaults/config_defaults.c"
        "store/config_store_nvs.c"
        "manager/config_manager.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "defaults"
        "store"
        "manager"
    REQUIRES
        freertos
        common
        nvs_flash
)
