idf_component_register(
    SRCS
        "led_service.c"
        "led_task.c"
        "led_effects.c"
        "led_scene_registry.c"
        "led_strip_encoder.c"
        "led_output_ws2812.c"
        "led_power_limit.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        app_core
        freertos
        common
        bsp
        esp_driver_rmt
)
