idf_component_register(
    SRCS
        "mic_service.c"
        "mic_task.c"
        "mic_task_events.c"
        "mic_task_capture_ws.c"
        "mic_task_flow.c"
        "mic_task_tts_pipeline.c"
        "mic_task_loopback.c"
        "mic_ws_client.c"
        "mic_ws_tts_stream.c"
        "mic_ws_protocol.c"
        "mic_ws_transport.c"
        "mic_i2s_hal.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        app_core
        freertos
        common
        heap
        esp_driver_i2s
        esp_event
        esp_websocket_client
)
