idf_component_register(
    SRCS
        "network_manager.c"
        "network_manager_state.c"
        "network_manager_profile.c"
        "network_manager_events.c"
        "network_manager_wifi.c"
        "network_policy.c"
        "network_event_handlers.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        app_core
        common
        freertos
        services_config
        esp_event
        esp_netif
        esp_wifi
        nvs_flash
)
