idf_component_register(
    SRCS
        "manager/network_manager.c"
        "manager/network_manager_state.c"
        "manager/network_manager_profile.c"
        "manager/network_manager_wifi.c"
        "events/network_manager_events.c"
        "events/network_event_handlers.c"
        "policy/network_policy.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "manager"
        "events"
        "policy"
    REQUIRES
        control_bus
        common
        freertos
        services_config
        esp_event
        esp_netif
        esp_wifi
        nvs_flash
)
