idf_component_register(
    SRCS
        "manager/storage_manager.c"
        "index/content_index.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "manager"
        "index"
    REQUIRES
        common
        freertos
        fatfs
        sdmmc
        esp_driver_spi
        esp_system
)
