idf_component_register(
    SRCS
        "web_server.c"
        "rest_api.c"
        "rest_api_common.c"
        "rest_api_core.c"
        "rest_api_mode.c"
        "rest_api_led.c"
        "rest_api_audio.c"
        "rest_api_config.c"
        "rest_api_network.c"
        "rest_api_offline.c"
        "rest_api_talk.c"
        "rest_api_diag.c"
        "rest_api_server_tts.c"
        "web_portal.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
    REQUIRES
        app_core
        common
        freertos
        services_config
        services_audio
        services_led
        services_mic
        services_network
        esp_http_server
        esp_https_server
        esp_http_client
        esp_timer
    EMBED_TXTFILES
        "certs/servercert.pem"
        "certs/prvtkey.pem"
        "portal/pages/offline.html"
        "portal/pages/hybrid.html"
        "portal/pages/installation.html"
        "portal/assets/css/app.css"
        "portal/assets/js/app.js"
)
