idf_component_register(
    SRCS
        "web/web_server.c"
        "web/web_portal.c"
        "api/core/rest_api.c"
        "api/core/rest_api_common.c"
        "api/core/rest_api_core.c"
        "api/endpoints/rest_api_mode.c"
        "api/endpoints/rest_api_led.c"
        "api/endpoints/rest_api_audio.c"
        "api/endpoints/rest_api_config.c"
        "api/endpoints/rest_api_network.c"
        "api/endpoints/rest_api_offline.c"
        "api/endpoints/rest_api_diag.c"
        "api/endpoints/rest_api_server_tts.c"
        "api/talk/rest_api_talk.c"
        "api/talk/rest_api_talk_common.c"
        "api/talk/rest_api_talk_say.c"
        "api/talk/rest_api_talk_live_ring.c"
        "api/talk/rest_api_talk_ws.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        "web"
        "api/core"
        "api/endpoints"
        "api/talk"
    REQUIRES
        app_core
        common
        freertos
        services_config
        services_audio
        services_led
        services_mic
        services_network
        esp_http_server
        esp_https_server
        esp_http_client
        esp_timer
    EMBED_TXTFILES
        "certs/servercert.pem"
        "certs/prvtkey.pem"
        "portal/pages/offline.html"
        "portal/pages/hybrid.html"
        "portal/pages/installation.html"
        "portal/assets/css/app.css"
        "portal/assets/js/core/dom_http.js"
        "portal/assets/js/features/hybrid_effects.js"
        "portal/assets/js/features/talk.js"
        "portal/assets/js/features/server_tts.js"
        "portal/assets/js/app.js"
)
